first link added

--- a/site/index.html
+++ b/site/index.html
@@ -96,7 +96,32 @@
 
   </style>
 
+
+
+
+
+
+
+
   <h1>List of Contents</h1>
+  <li>Arch Buckling Problem: https://github.com/smhrjn/ansys.net/blob/main/0/arch_buck.inp </li>
+  <li></li>
+  <li></li>
+  <li></li>
+  <li></li>
+
+
+
+
+
+
+
+
+
+
+
+
+
 
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" crossorigin="anonymous"></script>
 
