--- a/site/index.html
+++ b/site/index.html
@@ -104,7 +104,7 @@
 
 
   <h1>List of Contents</h1>
-  <li>Arch Buckling Problem: https://github.com/smhrjn/ansys.net/blob/main/0/arch_buck.inp </li>
+  <li><a href="https://github.com/smhrjn/ansys.net/blob/main/0/arch_buck.inp">Arch Buckling Problem</a> </li>
   <li></li>
   <li></li>
   <li></li>
