test additional html

--- a/site/index.html
+++ b/site/index.html
@@ -101,15 +101,15 @@
 
 
 
-
+<div class="container">
 
   <h1>List of Contents</h1>
   <li><a href="https://github.com/smhrjn/ansys.net/blob/main/0/arch_buck.inp">Arch Buckling Problem</a> </li>
+  <li><a href="inquiry.html">Inquiry Functions</a> </li>
   <li></li>
   <li></li>
   <li></li>
-  <li></li>
-
+</div>
 
 
 
